fix: 全部商品分类展开部分 z-index

--- a/page/pages-02/css/page-02.css
+++ b/page/pages-02/css/page-02.css
@@ -280,6 +280,7 @@ a:hover {
     margin: 0 auto;
     width: 1226px;
     height: 460px;
+    z-index: 10;
 }
 
 ul.category-list {
